# OOPlab6

./: .pre-commit-config.yaml  birth.xml  data.xml  pyproject.toml  workers.xml
birthday/: main.py  models.py  storage.py
car/: main.py  models.py  storage.py
examples/: example1.py  example2.py
tests/: run_all_tests.py  test_birthdays.py  test_car.py  test_library.py
